# UCRG-internal-comp-vision

./: .gitignore  README.md
DateDetector/: CMakeLists.txt  dateDetector.cpp  date_extractor.py
DateDetector/classes/: DateDetector.cpp  DateDetector.h  VisionBrain.cpp
IVStandDetector/: CMakeLists.txt  offsetCalculator.cpp  standAngleCalculator.cpp
MandarinDetector/: CMakeLists.txt  colorPicker.cpp  mandarin.cpp
RosPackages/date_detection/: CMakeLists.txt  package.xml
RosPackages/date_detection/include/: VisionBrain.h
RosPackages/date_detection/src/: DateDetector.cpp  VisionBrain.cpp  main.cpp
RosPackages/iv_stand_detection/: CMakeLists.txt  package.xml
RosPackages/iv_stand_detection/include/: OffsetCalculator.h  StandAngleCalculator.h  VisionBrain.h
RosPackages/iv_stand_detection/src/: OffsetCalculator.cpp  StandAngleCalculator.cpp  VisionBrain.cpp  main.cpp
RosPackages/rosbag_playback/: CMakeLists.txt  package.xml
RosPackages/rosbag_playback/src/: kinect_listener.cpp  rosbag_listener.cpp
RosPackages/uav_water_detection/: CMakeLists.txt  package.xml
RosPackages/uav_water_detection/include/: CheckerboardDetector.h  PoolDetector.h  VisionBrain.h
RosPackages/uav_water_detection/src/: CheckerboardDetector.cpp  PoolDetector.cpp  VisionBrain.cpp  VisionMain.cpp  colorPicker.cpp  main.cpp
RosPackages/uav_water_sim/: CMakeLists.txt  package.xml
RosPackages/uav_water_sim/include/: CheckerboardDetector.h  PoolDetector.h  VisionBrain.h
RosPackages/uav_water_sim/src/: CheckerboardDetector.cpp  PoolDetector.cpp  VisionBrain.cpp  main.cpp  visionMain.cpp
SwerveDrive/: CMakeLists.txt
WaterCollectionTasks/: CMakeLists.txt  checkerBoardDetector.cpp  checkerBoardDetector2.cpp  colorPicker.cpp  poolDetector.cpp
WaterCollectionTasks/classes/: CheckerBoardDetector.cpp  CheckerBoardDetector.h
